Assignment3.output
Grammar

    0 $accept: program $end

    1 program: INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations statements CLOSE_CURLYBRACE
    2        | INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations CLOSE_CURLYBRACE
    3        | INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE statements CLOSE_CURLYBRACE
    4        | INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE CLOSE_CURLYBRACE

    5 declarations: declaration
    6             | declarations declaration

    7 statements: statement
    8           | statements statement

    9 declaration: type IDENTIFIER SEMICOLON
   10            | type IDENTIFIER OPEN_SQUAREBRACKET INT_VALUE CLOSE_SQUAREBRACKET SEMICOLON

   11 statement: SEMICOLON
   12          | location EQUAL expression SEMICOLON

   13 expression: location
   14           | literal
   15           | expression PLUS expression
   16           | expression MINUS expression
   17           | expression MULTIPLY expression
   18           | expression DIVIDE expression
   19           | expression MODULO expression
   20           | OPEN_PARANTHESIS expression CLOSE_PARANTHESIS

   21 location: IDENTIFIER
   22         | IDENTIFIER OPEN_SQUAREBRACKET expression CLOSE_SQUAREBRACKET

   23 literal: INT_VALUE
   24        | TRUE
   25        | FALSE

   26 type: INT
   27     | BOOLEAN


Terminals, with rules where they appear

$end (0) 0
error (256)
SEMICOLON (258) 9 10 11 12
OPEN_PARANTHESIS (259) 1 2 3 4 20
CLOSE_PARANTHESIS (260) 1 2 3 4 20
OPEN_SQUAREBRACKET (261) 10 22
CLOSE_SQUAREBRACKET (262) 10 22
OPEN_CURLYBRACE (263) 1 2 3 4
CLOSE_CURLYBRACE (264) 1 2 3 4
MAIN (265) 1 2 3 4
FALSE (266) 25
INT (267) 1 2 3 4 26
BOOLEAN (268) 27
TRUE (269) 24
EQUAL (270) 12
PLUS (271) 15
MINUS (272) 16
MULTIPLY (273) 17
DIVIDE (274) 18
MODULO (275) 19
IDENTIFIER (276) 9 10 21 22
INT_VALUE (277) 10 23


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
program (24)
    on left: 1 2 3 4, on right: 0
declarations (25)
    on left: 5 6, on right: 1 2 6
statements (26)
    on left: 7 8, on right: 1 3 8
declaration (27)
    on left: 9 10, on right: 5 6
statement (28)
    on left: 11 12, on right: 7 8
expression (29)
    on left: 13 14 15 16 17 18 19 20, on right: 12 15 16 17 18 19 20
    22
location (30)
    on left: 21 22, on right: 12 13
literal (31)
    on left: 23 24 25, on right: 14
type (32)
    on left: 26 27, on right: 9 10


State 0

    0 $accept: . program $end

    INT  shift, and go to state 1

    program  go to state 2


State 1

    1 program: INT . MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations statements CLOSE_CURLYBRACE
    2        | INT . MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations CLOSE_CURLYBRACE
    3        | INT . MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE statements CLOSE_CURLYBRACE
    4        | INT . MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE CLOSE_CURLYBRACE

    MAIN  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: INT MAIN . OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations statements CLOSE_CURLYBRACE
    2        | INT MAIN . OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations CLOSE_CURLYBRACE
    3        | INT MAIN . OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE statements CLOSE_CURLYBRACE
    4        | INT MAIN . OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE CLOSE_CURLYBRACE

    OPEN_PARANTHESIS  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: INT MAIN OPEN_PARANTHESIS . CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations statements CLOSE_CURLYBRACE
    2        | INT MAIN OPEN_PARANTHESIS . CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations CLOSE_CURLYBRACE
    3        | INT MAIN OPEN_PARANTHESIS . CLOSE_PARANTHESIS OPEN_CURLYBRACE statements CLOSE_CURLYBRACE
    4        | INT MAIN OPEN_PARANTHESIS . CLOSE_PARANTHESIS OPEN_CURLYBRACE CLOSE_CURLYBRACE

    CLOSE_PARANTHESIS  shift, and go to state 6


State 6

    1 program: INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS . OPEN_CURLYBRACE declarations statements CLOSE_CURLYBRACE
    2        | INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS . OPEN_CURLYBRACE declarations CLOSE_CURLYBRACE
    3        | INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS . OPEN_CURLYBRACE statements CLOSE_CURLYBRACE
    4        | INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS . OPEN_CURLYBRACE CLOSE_CURLYBRACE

    OPEN_CURLYBRACE  shift, and go to state 7


State 7

    1 program: INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE . declarations statements CLOSE_CURLYBRACE
    2        | INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE . declarations CLOSE_CURLYBRACE
    3        | INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE . statements CLOSE_CURLYBRACE
    4        | INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE . CLOSE_CURLYBRACE

    SEMICOLON         shift, and go to state 8
    CLOSE_CURLYBRACE  shift, and go to state 9
    INT               shift, and go to state 10
    BOOLEAN           shift, and go to state 11
    IDENTIFIER        shift, and go to state 12

    declarations  go to state 13
    statements    go to state 14
    declaration   go to state 15
    statement     go to state 16
    location      go to state 17
    type          go to state 18


State 8

   11 statement: SEMICOLON .

    $default  reduce using rule 11 (statement)


State 9

    4 program: INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE CLOSE_CURLYBRACE .

    $default  reduce using rule 4 (program)


State 10

   26 type: INT .

    $default  reduce using rule 26 (type)


State 11

   27 type: BOOLEAN .

    $default  reduce using rule 27 (type)


State 12

   21 location: IDENTIFIER .
   22         | IDENTIFIER . OPEN_SQUAREBRACKET expression CLOSE_SQUAREBRACKET

    OPEN_SQUAREBRACKET  shift, and go to state 19

    $default  reduce using rule 21 (location)


State 13

    1 program: INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations . statements CLOSE_CURLYBRACE
    2        | INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations . CLOSE_CURLYBRACE
    6 declarations: declarations . declaration

    SEMICOLON         shift, and go to state 8
    CLOSE_CURLYBRACE  shift, and go to state 20
    INT               shift, and go to state 10
    BOOLEAN           shift, and go to state 11
    IDENTIFIER        shift, and go to state 12

    statements   go to state 21
    declaration  go to state 22
    statement    go to state 16
    location     go to state 17
    type         go to state 18


State 14

    3 program: INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE statements . CLOSE_CURLYBRACE
    8 statements: statements . statement

    SEMICOLON         shift, and go to state 8
    CLOSE_CURLYBRACE  shift, and go to state 23
    IDENTIFIER        shift, and go to state 12

    statement  go to state 24
    location   go to state 17


State 15

    5 declarations: declaration .

    $default  reduce using rule 5 (declarations)


State 16

    7 statements: statement .

    $default  reduce using rule 7 (statements)


State 17

   12 statement: location . EQUAL expression SEMICOLON

    EQUAL  shift, and go to state 25


State 18

    9 declaration: type . IDENTIFIER SEMICOLON
   10            | type . IDENTIFIER OPEN_SQUAREBRACKET INT_VALUE CLOSE_SQUAREBRACKET SEMICOLON

    IDENTIFIER  shift, and go to state 26


State 19

   22 location: IDENTIFIER OPEN_SQUAREBRACKET . expression CLOSE_SQUAREBRACKET

    OPEN_PARANTHESIS  shift, and go to state 27
    FALSE             shift, and go to state 28
    TRUE              shift, and go to state 29
    IDENTIFIER        shift, and go to state 12
    INT_VALUE         shift, and go to state 30

    expression  go to state 31
    location    go to state 32
    literal     go to state 33


State 20

    2 program: INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations CLOSE_CURLYBRACE .

    $default  reduce using rule 2 (program)


State 21

    1 program: INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations statements . CLOSE_CURLYBRACE
    8 statements: statements . statement

    SEMICOLON         shift, and go to state 8
    CLOSE_CURLYBRACE  shift, and go to state 34
    IDENTIFIER        shift, and go to state 12

    statement  go to state 24
    location   go to state 17


State 22

    6 declarations: declarations declaration .

    $default  reduce using rule 6 (declarations)


State 23

    3 program: INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE statements CLOSE_CURLYBRACE .

    $default  reduce using rule 3 (program)


State 24

    8 statements: statements statement .

    $default  reduce using rule 8 (statements)


State 25

   12 statement: location EQUAL . expression SEMICOLON

    OPEN_PARANTHESIS  shift, and go to state 27
    FALSE             shift, and go to state 28
    TRUE              shift, and go to state 29
    IDENTIFIER        shift, and go to state 12
    INT_VALUE         shift, and go to state 30

    expression  go to state 35
    location    go to state 32
    literal     go to state 33


State 26

    9 declaration: type IDENTIFIER . SEMICOLON
   10            | type IDENTIFIER . OPEN_SQUAREBRACKET INT_VALUE CLOSE_SQUAREBRACKET SEMICOLON

    SEMICOLON           shift, and go to state 36
    OPEN_SQUAREBRACKET  shift, and go to state 37


State 27

   20 expression: OPEN_PARANTHESIS . expression CLOSE_PARANTHESIS

    OPEN_PARANTHESIS  shift, and go to state 27
    FALSE             shift, and go to state 28
    TRUE              shift, and go to state 29
    IDENTIFIER        shift, and go to state 12
    INT_VALUE         shift, and go to state 30

    expression  go to state 38
    location    go to state 32
    literal     go to state 33


State 28

   25 literal: FALSE .

    $default  reduce using rule 25 (literal)


State 29

   24 literal: TRUE .

    $default  reduce using rule 24 (literal)


State 30

   23 literal: INT_VALUE .

    $default  reduce using rule 23 (literal)


State 31

   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   17           | expression . MULTIPLY expression
   18           | expression . DIVIDE expression
   19           | expression . MODULO expression
   22 location: IDENTIFIER OPEN_SQUAREBRACKET expression . CLOSE_SQUAREBRACKET

    CLOSE_SQUAREBRACKET  shift, and go to state 39
    PLUS                 shift, and go to state 40
    MINUS                shift, and go to state 41
    MULTIPLY             shift, and go to state 42
    DIVIDE               shift, and go to state 43
    MODULO               shift, and go to state 44


State 32

   13 expression: location .

    $default  reduce using rule 13 (expression)


State 33

   14 expression: literal .

    $default  reduce using rule 14 (expression)


State 34

    1 program: INT MAIN OPEN_PARANTHESIS CLOSE_PARANTHESIS OPEN_CURLYBRACE declarations statements CLOSE_CURLYBRACE .

    $default  reduce using rule 1 (program)


State 35

   12 statement: location EQUAL expression . SEMICOLON
   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   17           | expression . MULTIPLY expression
   18           | expression . DIVIDE expression
   19           | expression . MODULO expression

    SEMICOLON  shift, and go to state 45
    PLUS       shift, and go to state 40
    MINUS      shift, and go to state 41
    MULTIPLY   shift, and go to state 42
    DIVIDE     shift, and go to state 43
    MODULO     shift, and go to state 44


State 36

    9 declaration: type IDENTIFIER SEMICOLON .

    $default  reduce using rule 9 (declaration)


State 37

   10 declaration: type IDENTIFIER OPEN_SQUAREBRACKET . INT_VALUE CLOSE_SQUAREBRACKET SEMICOLON

    INT_VALUE  shift, and go to state 46


State 38

   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   17           | expression . MULTIPLY expression
   18           | expression . DIVIDE expression
   19           | expression . MODULO expression
   20           | OPEN_PARANTHESIS expression . CLOSE_PARANTHESIS

    CLOSE_PARANTHESIS  shift, and go to state 47
    PLUS               shift, and go to state 40
    MINUS              shift, and go to state 41
    MULTIPLY           shift, and go to state 42
    DIVIDE             shift, and go to state 43
    MODULO             shift, and go to state 44


State 39

   22 location: IDENTIFIER OPEN_SQUAREBRACKET expression CLOSE_SQUAREBRACKET .

    $default  reduce using rule 22 (location)


State 40

   15 expression: expression PLUS . expression

    OPEN_PARANTHESIS  shift, and go to state 27
    FALSE             shift, and go to state 28
    TRUE              shift, and go to state 29
    IDENTIFIER        shift, and go to state 12
    INT_VALUE         shift, and go to state 30

    expression  go to state 48
    location    go to state 32
    literal     go to state 33


State 41

   16 expression: expression MINUS . expression

    OPEN_PARANTHESIS  shift, and go to state 27
    FALSE             shift, and go to state 28
    TRUE              shift, and go to state 29
    IDENTIFIER        shift, and go to state 12
    INT_VALUE         shift, and go to state 30

    expression  go to state 49
    location    go to state 32
    literal     go to state 33


State 42

   17 expression: expression MULTIPLY . expression

    OPEN_PARANTHESIS  shift, and go to state 27
    FALSE             shift, and go to state 28
    TRUE              shift, and go to state 29
    IDENTIFIER        shift, and go to state 12
    INT_VALUE         shift, and go to state 30

    expression  go to state 50
    location    go to state 32
    literal     go to state 33


State 43

   18 expression: expression DIVIDE . expression

    OPEN_PARANTHESIS  shift, and go to state 27
    FALSE             shift, and go to state 28
    TRUE              shift, and go to state 29
    IDENTIFIER        shift, and go to state 12
    INT_VALUE         shift, and go to state 30

    expression  go to state 51
    location    go to state 32
    literal     go to state 33


State 44

   19 expression: expression MODULO . expression

    OPEN_PARANTHESIS  shift, and go to state 27
    FALSE             shift, and go to state 28
    TRUE              shift, and go to state 29
    IDENTIFIER        shift, and go to state 12
    INT_VALUE         shift, and go to state 30

    expression  go to state 52
    location    go to state 32
    literal     go to state 33


State 45

   12 statement: location EQUAL expression SEMICOLON .

    $default  reduce using rule 12 (statement)


State 46

   10 declaration: type IDENTIFIER OPEN_SQUAREBRACKET INT_VALUE . CLOSE_SQUAREBRACKET SEMICOLON

    CLOSE_SQUAREBRACKET  shift, and go to state 53


State 47

   20 expression: OPEN_PARANTHESIS expression CLOSE_PARANTHESIS .

    $default  reduce using rule 20 (expression)


State 48

   15 expression: expression . PLUS expression
   15           | expression PLUS expression .
   16           | expression . MINUS expression
   17           | expression . MULTIPLY expression
   18           | expression . DIVIDE expression
   19           | expression . MODULO expression

    MULTIPLY  shift, and go to state 42
    DIVIDE    shift, and go to state 43
    MODULO    shift, and go to state 44

    $default  reduce using rule 15 (expression)


State 49

   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   16           | expression MINUS expression .
   17           | expression . MULTIPLY expression
   18           | expression . DIVIDE expression
   19           | expression . MODULO expression

    MULTIPLY  shift, and go to state 42
    DIVIDE    shift, and go to state 43
    MODULO    shift, and go to state 44

    $default  reduce using rule 16 (expression)


State 50

   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   17           | expression . MULTIPLY expression
   17           | expression MULTIPLY expression .
   18           | expression . DIVIDE expression
   19           | expression . MODULO expression

    $default  reduce using rule 17 (expression)


State 51

   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   17           | expression . MULTIPLY expression
   18           | expression . DIVIDE expression
   18           | expression DIVIDE expression .
   19           | expression . MODULO expression

    $default  reduce using rule 18 (expression)


State 52

   15 expression: expression . PLUS expression
   16           | expression . MINUS expression
   17           | expression . MULTIPLY expression
   18           | expression . DIVIDE expression
   19           | expression . MODULO expression
   19           | expression MODULO expression .

    $default  reduce using rule 19 (expression)


State 53

   10 declaration: type IDENTIFIER OPEN_SQUAREBRACKET INT_VALUE CLOSE_SQUAREBRACKET . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 54

   10 declaration: type IDENTIFIER OPEN_SQUAREBRACKET INT_VALUE CLOSE_SQUAREBRACKET SEMICOLON .

    $default  reduce using rule 10 (declaration)
